--- a/google_homepage/index.html
+++ b/google_homepage/index.html
@@ -10,35 +10,41 @@
     <div class="panel">
       <nav>
         <ul class="header">
-          <li class="pic headerli">
-            <a href="https://www.github.com/cengizcmataraci" target="_blank"
-              ><img
-                src="assets/profilepic.jpg"
-                alt=""
-                style="margin-right: 1px;"
-            /></a>
-          </li>
-          <li style="margin: 8px" class="headerli">
-            <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"
-              ><img src="assets/appsbutton.svg" alt="" style="width: 16px; height: 16px; margin-right: 3px;"></a
-            >
-          </li>
-          <li style="margin: 8px; margin-left: -2px;" class="headerli">
-            <a
-              href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl"
-              >Images</a
-            >
-          </li>
+          
           <li style="margin: 8px" class="headerli">
             <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl"
               >Gmail</a
             >
           </li>
+         
+          <li style="margin: 8px; margin-left: -2px;" class="headerli">
+            <a
+              href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl"
+              >Görseller</a
+            >
+          </li>
+
+          <li style="margin: 8px" class="headerli">
+            <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"
+              ><img src="assets/appsbutton.svg" alt="" style="width: 14px; height: 16px; margin-right: 3px;"></a
+            >
+          </li>
+          <!--Hesap Pic start-->
+          <li class="pic headerli">
+            <a href="https://www.github.com/cengizcmataraci" target="_blank"
+              ><img class="pic"
+                src="https://lh3.googleusercontent.com/ogw/ADGmqu_WlqO_WWMzAespPeBlTEWPCImkJrjjdBjvUM7XcA=s64-c-mo"
+                alt=""
+                style="margin-right: 1px;"
+            /></a>
+          </li>
+          <!--end-->
         </ul>
       </nav>
+
       <div class="container">
         <img
-          src="assets/googlefirstlogo.png"
+          src="/google_homepage/assets/logo.png"
           width="350px"
           alt=""
         />
@@ -68,6 +74,7 @@
               />
             </div>
           </div>
+          <div  class="harfCevirme" aria-label="Harf çevirme aracı"><span class=""><img  src="/google_homepage/assets/tia.png"></span></div>
         </div>
       </div>
 
